# marsupial

./: .gitignore  .gitmodules  Cargo.toml  build.rs  changelog.md  readme.md
.cargo/: config.toml
assets/: strip.sh
benches/: everything.rs
fuzzing/fuzzing-utils/: Cargo.toml
fuzzing/fuzzing-utils/src/: lib.rs
fuzzing/target-marsupial-kt128/: Cargo.toml
fuzzing/target-marsupial-kt128/src/: main.rs
fuzzing/target-marsupial-kt256/: Cargo.toml
fuzzing/target-marsupial-kt256/src/: main.rs
src/: lib.rs  test.rs
sys/: Cargo.toml  build.rs  license.txt
