[workspace]
members = ["sys"]
resolver = "2"

[workspace.package]
repository = "https://github.com/superwhiskers/marsupial"
version = "0.0.3"
authors = ["Jack O'Connor <oconnor663@gmail.com>", "superwhiskers <whiskerdev@protonmail.com>"]
edition = "2021"
keywords = ["kangarootwelve", "k12"]
readme = "readme.md"

[package]
name = "marsupial"
description = "safe bindings to the xkcp/k12 implementation of the kangarootwelve hash function"
license = "CC0-1.0"
repository.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
keywords.workspace = true
readme.workspace = true

[dependencies]
arrayvec = "0.7"
constant_time_eq = "0.3"

[dependencies.marsupial-sys]
version = "0.0.2"
path = "./sys"

[dev-dependencies]
digest = "0.10"
hex = "0.4"
k12 = "0.3"
page_size = "0.6"
rand = "0.8"
criterion = "0.5"

[dev-dependencies.tiny-keccak]
version = "2"
features = ["k12"]

[[bench]]
name = "everything"
harness = false

[profile.release]
opt-level = 3
codegen-units = 1
debug = false
strip = "symbols"
panic = "abort"
lto = "fat"
